--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'/Users/amitkishore/Desktop/Text_Summarizer/Text_summarizer/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'/Users/amitkishore/Desktop/Text_Summarizer/Text_summarizer'"
       ]
      },
      "execution_count": 4,
@@ -81,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textSummarizer.constants import *\n",
-    "from textSummarizer.utils.common import read_yaml, create_directories"
+    "from src.text_summarizer.constants import *\n",
+    "from src.text_summarizer.utils.common import read_yaml, create_directories"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from textSummarizer.logging import logger"
+    "from src.text_summarizer.logging import logger"
    ]
   },
   {
@@ -138,8 +138,6 @@
     "    def __init__(self, config: DataValidationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "\n",
-    "    \n",
     "    def validate_all_files_exist(self)-> bool:\n",
     "        try:\n",
     "            validation_status = None\n",
@@ -171,10 +169,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-17 11:58:23,823: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-17 11:58:23,826: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-17 11:58:23,828: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-17 11:58:23,829: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2024-09-22 14:47:06,351: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-22 14:47:06,354: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-22 14:47:06,355: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-22 14:47:06,356: INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
